<resources>
    <string name="app_name">SmartLock2</string>
    <string name="title_home">Home</string>
    <string name="title_me">Me</string>
    <string name="title_setting">Settings</string>
    <string name="title_system">System</string>
    <string name="title_check_repair">Check&amp;Repair</string>
    <string name="title_version_info">Version Info</string>
    <string name="title_wifi">Wi-Fi Setting</string>
    <string name="title_update">Update</string>
    <string name="title_update_lock">Update Lock</string>
    <string name="title_update_face">Update Face</string>
    <string name="title_scanning">Scanning</string>
    <string name="title_verifying">Verifying</string>
    <string name="title_device">Device</string>
    <string name="title_device_management">Devices</string>
    <string name="title_keys">Unlock Information</string>
    <string name="title_temp_pwd">Temp-Password</string>
    <string name="title_record">Record</string>
    <string name="title_lifecycle">Lifecycle Settings</string>
    <string name="title_user">User</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="back_panel">Back Panel</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="all">All</string>
    <string name="album">Album</string>
    <string name="argument_mac_address" translatable="false">Mac_Address</string>
    <string name="argument_serial_number" translatable="false">Serial_Number</string>
    <string name="argument_user_info" translatable="false">User_Info</string>
    <string name="argument_update_file" translatable="false">Update_File</string>
    <string name="argument_update_face" translatable="false">Update_Face</string>
    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location.
        <b>We will not use this information in any way.</b></string>
    <string name="grant_permission">Grant</string>
    <string name="permission_settings">Settings</string>
    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>
    <string name="camera_and_storage_permission_title">PERMISSIONS REQUIRED</string>
    <string name="camera_and_storage_permission_info">The app needs access to the <b>Camera</b> and <b>Storage</b> to scan or read the QR code.<b>\nWe will not use this information in any way.</b></string>
    <string name="camera_permission_title">CAMERA PERMISSION REQUIRED</string>
    <string name="camera_permission_info">The app needs access to the <b>Camera</b>  to scan the QR code.</string>
    <string name="storage_permission_title">STORAGE PERMISSION REQUIRED</string>
    <string name="storage_permission_info">This app needs access to your <b>Storage</b> in order to read the local QR code.\n
        <b>We will not use this information in any way.</b></string>
    <string name="waite">Waiting</string>
    <string name="wrong">Wrong</string>
    <string name="error">ERROR</string>
    <string name="notice">NOTICE</string>
    <string name="dialog_waiting">Please waiting</string>
    <string name="dialog_device_exists">Device already exists</string>
    <string name="dialog_error_message_wrong_qr_code">No information is detected, please scan the correct QR code.</string>
    <string name="dialog_error_qr_code_has_expired">QR code has expired.</string>
    <string name="dialog_restore_the_device_successfully">Restore the device successfully</string>
    <string name="dialog_failed_to_restore_device">Failed to restore device</string>
    <string name="dialog_add_the_device_successfully">Added new device successfully</string>
    <string name="dialog_failed_to_add_device">Failed to add new device</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="dialog_share">Share</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="unbind">Unbind</string>
    <string name="delay_second" formatted="true">%d second</string>
    <string name="dialog_guide_title">CAN\'T SEE YOUR LOCK?</string>
    <string name="dialog_guide_info">1. Make sure the LOCK is <b>turned on</b>.
        \n\n2. Make sure the <b>relevant</b> firmware and SoftDevice are flashed.
    \n\n3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
        \n\n Press <b>CONFIRM</b> to reconnect, <b>CANCEL</b> to exit.</string>
    <string name="ble_link_loss">Bluetooth connection lost</string>
    <string name="ble_not_supported">The device’s Bluetooth does not support the service</string>
    <string name="ble_connect_timeout">Request connection <b>timeout</b>. \n Make sure the device is <b>turned on</b> and near the phone
    \n Press <b>CONFIRM</b> to reconnect, <b>CANCEL</b> to exit. </string>
    <string name="ble_terminate_peer_user">The user actively disconnects Bluetooth</string>
    <string name="ble_terminate_peer_device">The device actively disconnects Bluetooth</string>
    <string name="dialog_message_open_slide">Open The Slide</string>
    <string name="dialog_internet_error" formatted="true">Network request error, please try again later.\n\t %s</string>
    <string name="dialog_delete_device_tips">Do you want to delete the device?</string>
    <string name="dialog_delete_device_tips_restore">Click&lt;b> CONFIRM &lt;/b>to &lt;b>restore&lt;/b> the factory settings and delete the data, click&lt;b> CANCEL&lt;/b> to &lt;b>delete only&lt;/b>.</string>
    <string name="dialog_title_password">Set Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fingerprint_is_full">Fingerprint is full.</string>
    <string name="fingerprint_already_exist">Fingerprint already exists</string>
    <string name="add_unlock_information">Entering unlock information</string>
    <string name="edit_unlock_info_name">Edit Name</string>
    <string name="dialog_temp_pwd_title">Create Temp-Password</string>
    <string name="dialog_temp_pwd_once">Once:</string>
    <string name="once_true">True</string>
    <string name="once_false">False</string>
    <string name="effective_period">Effective period:</string>
    <string name="dialog_error_temp_secret_code">Temporary security key is empty.</string>
    <string name="dialog_error_temp_pwd_limit">The number of temporary passwords has exceeded the upper limit.</string>
    <string name="dialog_error_temp_pwd_create">Temporary password generated error, please try again later.</string>
    <string name="dialog_name_input_title">Username</string>
    <string name="dialog_name_input_tips">Please enter a new username.</string>
    <string name="dialog_name_input_error">Incorrect characters entered.</string>
    <string name="dialog_wifi_server_ip">Server Address</string>
    <string name="dialog_wifi_server_ip_helper">eg:192.1.1.168</string>
    <string name="dialog_wifi_server_port">Server Port</string>
    <string name="dialog_wifi_wifi_ip" formatted="true">&lt;b>Wi-Fi:&lt;/b> %s</string>
    <string name="dialog_wifi_wifi_pwd">Wi-Fi Password</string>
    <string name="dialog_wifi_server_ip_error">Server address error.</string>
    <string name="dialog_wifi_server_port_error">Server port error.</string>
    <string name="dialog_wifi_server_wifi">Server address error.</string>
    <string name="dialog_wifi_set_error">Configuration failed, try again later.</string>
    <string name="password_length_tip" formatted="true">Password length must be %d characters .</string>
    <string name="password_length_error" formatted="true">Password length is not %d.</string>
    <string name="password_confirm_incorrect">You enter two passwords do not match.</string>
    <string name="dialog_title_secret_code">Add Secret Code</string>
    <string name="secret_code_name_tip" formatted="true">Name</string>
    <string name="secret_code_key_tip" formatted="true">Name of Secret Code</string>
    <string name="secret_code_value_tip" formatted="true">Secret Code</string>
    <string name="secret_code_length_tip" formatted="true">Secret Code must be %d characters .</string>
    <string name="secret_code_length_error" formatted="true">Secret Code length is not %d.</string>
    <string name="bottom_dialog_volume_selector">Volume Selection</string>
    <string name="bottom_dialog_volume_mute">Mute</string>
    <string name="bottom_dialog_volume_low">Low</string>
    <string name="bottom_dialog_volume_middle">Middle</string>
    <string name="bottom_dialog_volume_high">High</string>
    <string name="bottom_dialog_language_selector">Language Selection</string>
    <string name="bottom_dialog_language_only_chinese">Only Chinese</string>
    <string name="bottom_dialog_language_chinese">Chinese</string>
    <string name="bottom_dialog_language_english">English</string>
    <string name="bottom_dialog_unlock_period_selector">Unlock Period </string>
    <string name="bottom_dialog_unlock_period_5">5 Second</string>
    <string name="bottom_dialog_unlock_period_8">8 Second</string>
    <string name="bottom_dialog_unlock_period_10">10 Second</string>
    <string name="bottom_dialog_unlock_period_15">15 Second</string>
    <string name="bottom_dialog_unlock_period_30">30 Second</string>
    <string name="time_picker">Time Picker</string>
    <string name="time_picker_to">To</string>
    <string name="bottom_dialog_add_user">New User</string>
    <string name="bottom_dialog_new_user">User</string>
    <string name="bottom_dialog_new_admin">Admin</string>
    <string name="bottom_dialog_user_settings">Settings</string>
    <string name="bottom_dialog_user_share">Share</string>
    <string name="bottom_dialog_user_delete">Delete</string>
    <string name="bottom_dialog_user_batch_deletion">Batch Deletion</string>
    <string name="bottom_dialog_user_user_lifecycle">Lifecycle Settings</string>
    <string name="bottom_dialog_user_user_edit_name">Edit Name</string>
    <string name="bottom_dialog_user_user_set_as_admin">Set As Administrator</string>
    <string name="user_name" translatable="false">Jack</string>
    <string name="user_phone" translatable="false">13262223222</string>
    <string name="copyright" translatable="false">Copyright@Datang</string>
    <string name="device_management">Device Management</string>
    <string name="system_settings">System Settings</string>
    <string name="about_us">About Us</string>
    <string name="scan_start">Start Scanning</string>
    <string name="scan_stop">Stop Scanning</string>
    <string name="verify">Security Certification</string>
    <string name="version_serial_number" formatted="true">&lt;b>Serial Number:&lt;/b> %s</string>
    <string name="version_runtime_version" formatted="true">&lt;b>Runtime Version:&lt;/b> %s</string>
    <string name="version_lasted_version" formatted="true">&lt;b>Lasted Version:&lt;/b> %s</string>
    <string name="version_release_time" formatted="true">&lt;b>Release Time:&lt;/b> %s</string>
    <string name="version_release_notes"><b>Release Notes:</b></string>
    <string name="lock">Lock</string>
    <string name="update_tips"> 1.Please keep your phone and device fully charged,\n2.Do not operate the device during the update,    \n3.During the update process, do not turn off the phone, switch to the background, or turn off the screen.</string>
    <string name="download">Download</string>
</resources>