<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_ip"
        style="@style/AppTheme.TextFieldOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_6dp"
        android:hint="@string/dialog_wifi_server_ip"
        android:paddingHorizontal="@dimen/margin_32dp"
        android:paddingVertical="@dimen/margin_10dp"
        app:endIconMode="clear_text"
        app:helperText="@string/dialog_wifi_server_ip_helper"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_ip_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_port"
        style="@style/AppTheme.TextFieldOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_6dp"
        android:hint="@string/dialog_wifi_server_port"
        android:paddingHorizontal="@dimen/margin_32dp"
        android:paddingVertical="@dimen/margin_10dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/server_ip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_pwd_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wifi_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_wifi_wifi_ip"
        android:paddingHorizontal="@dimen/margin_32dp"
        android:paddingVertical="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/server_port" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wifi_pwd"
        style="@style/AppTheme.TextFieldOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_6dp"
        android:hint="@string/dialog_wifi_wifi_pwd"
        android:paddingHorizontal="@dimen/margin_32dp"
        android:paddingVertical="@dimen/margin_10dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/wifi_ip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wifi_pwd_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
