<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notice_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:gravity="center"
            android:text="@string/notice"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notice_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/update_tips"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/notice_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upgrade_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:gravity="center"
            android:hint="@string/lock"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/notice_tips" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/serial_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:hint="@string/version_serial_number"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/upgrade_type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/runtime_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:hint="@string/version_runtime_version"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/serial_number" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lasted_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_6dp"
            android:hint="@string/version_lasted_version"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/runtime_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/release_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_6dp"
            android:hint="@string/version_release_time"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/lasted_version" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/release_notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_6dp"
            android:text="@string/version_release_notes"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/release_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/release_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_6dp"
            android:hint="@string/version_release_notes"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/release_notes_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/download_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_48dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/download"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/release_notes" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            app:layout_constraintTop_toBottomOf="@id/download_btn" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:gravity="center"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upgrade_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/AppTheme.TextAppearance.Subtitle2"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/percent"
            app:layout_constraintTop_toTopOf="@id/percent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>